# agentic-slack-bot

./: .gitignore  README.md  pyproject.toml
src/: bot.py
src/gus/: login.py
src/llms/: chatmodel.py  embeddings.py  llm.py
src/tools/: common_tools.py  confluence_loader.py  confluence_search_tool.py  slack_loader.py  slack_search_tool.py  vector_store_manager.py
vector_stores/faiss_index_C08P8NG28SH/: index.faiss  index.pkl
vector_stores/faiss_index_C08PT80H81J/: index.faiss  index.pkl
vector_stores/faiss_index_confluence/: index.faiss  index.pkl
vector_stores/faiss_index_slack_C08P8NG28SH/: index.faiss  index.pkl
vector_stores/faiss_index_slack_C08PT81TSNN/: index.faiss  index.pkl
