[tool.poetry]
name = "agentic_slack_bot"
version = "0.1.0"
description = ""
authors = ["no-reply <noreply@salesforce.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
flask = "^3.1.0"
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
requests-mock = "^1.12.1"
pytest-cov = "^6.0.0"
python-dotenv = "^1.0.0"
slack_bolt = "^1.22.0"
logging = "*"
cumulusci = { git = "https://github.com/SFDO-Tooling/CumulusCI.git", branch = "move_to_pydatntic_v2" }
snowfakery = { git = "https://github.com/SFDO-Tooling/Snowfakery.git", branch = "move_to_pydantic_v2" }
salesforce-bulk = { git = "https://github.com/aditya-balachander/salesforce-bulk.git", branch = "set_verify_false" }
pydantic = "^2.0"
langchain_core = "^0.3"
langchain = "^0.3"
langchain_openai = "^0.3"
langchain_community = "^0.3"
langgraph = "^0.3"
bs4="*"
faiss-cpu="*"
pypdf="*"
flashrank="*"
aws-advanced-python-wrapper = "*"
psycopg = "*"
psycopg-binary = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"